samples/_failures_safe/1761223029_040377_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54bfc062.c: In function ‘main’:
./samples/SAFE/__tmp_54bfc062.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_54bfc062.c:143:5: error: expected declaration or statement at end of input
  143 |     if
      |     ^~
